--- a/src/pysmallgames/snake/config.yaml
+++ b/src/pysmallgames/snake/config.yaml
@@ -3,10 +3,11 @@ geometry:
 lines:
   score:
     start_pos: [ 480, 0 ]
-    end_pos: [480, 480]
+    end_pos: [ 480, 480 ]
 colors:
   bg: [ 0, 0, 0 ]
   border: [ 255, 255, 0 ]
+  food: [0, 120, 120]
   font: [ 0, 255, 0 ]
   info: [ 130, 250, 120 ]
   warning: [ 255, 0, 255 ]
@@ -16,7 +17,9 @@ font:
   size: 25
 fps: 60
 snake_init:
-  pos: [ 15, 5 ]
+  pos: [ 8, 5 ]
   length: 5
+  size: 24
+  border: [ 20, 20 ]
   speed: 5
   direction: 'right'
